--- a/backend/.vscode/launch.json
+++ b/backend/.vscode/launch.json
@@ -5,13 +5,12 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "drf",
+            "name": "DRF",
             "type": "python",
             "request": "launch",
             "program": "${workspaceFolder}/manage.py",
             "args": [
                 "runserver",
-                "0.0.0.0:8000"
             ],
             "django": true,
             "justMyCode": true
